# god-spear-mcp-gate

./: .gitignore  MIGRATED_TO.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.md  integration-pattern.md
examples/policies/: default-policy.json
examples/requests/: outside-root-write.json  safe-read.json
examples/results/: outside-root-write.decision.json  safe-read.decision.json
src/god_spear_mcp_gate/: __init__.py  cli.py  policy.py
tests/: test_cli.py
