[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "god-spear-mcp-gate"
version = "0.1.0"
description = "Minimal MCP-style preflight trust gate demo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BIN Zhang" }
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
god-spear-mcp-gate = "god_spear_mcp_gate.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
